# cpp_patterns

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: StaticAnalyzers.cmake
examples/: CMakeLists.txt
examples/01_example/: main.cpp
examples/02_example/: CMakeLists.txt  main.cpp
examples/04_reflect/: main.cpp
examples/05_range/: main.cpp
patterns/: CMakeLists.txt
patterns/01_example/: CMakeLists.txt  main.cpp
practice/: CMakeLists.txt
practice/01_cnstr_spec/: CMakeLists.txt  main.cpp
practice/02_cnstr_spec/: main.cpp
practice/03_hana_reflect/: main.cpp
practice/04_reflect/: main.cpp
practice/05_range/: main.cpp
practice/06_refl/: main.cpp
practice/07_refl_tup_view/: main.cpp
